[package]
name = "protohackers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "problem0"
path = "src/problem0.rs"

[[bin]]
name = "problem1"
path = "src/problem1.rs"

[[bin]]
name = "problem2"
path = "src/problem2.rs"

[dependencies]
lazy_static = "1.5.0"
num-prime = "0.4.4"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
